mysqlpod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp.pod
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql

  subdomain: mysql-h
  hostname: mysql-pod
