headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
spec:
  ports:
  - port:3306
  selector:
    app: mysql

  clusterIP: None
